Add connection section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
                 <li><strong>APIs:</strong>Communication between frontend and backend.</li>
                 <li><strong>NPM:</strong>Package manager.</li>
             </ul>
+
+            <section class="features">
+                <div class="feature/card">
+                    <h3>React-Based UI</h3>
+                    <p>
+                        Built using component-driven design for fast rendering and maintenance.
+                    </p>
+                </div>
+                <div class="feature/card">
+                    <h3>Node.js Backend</h3>
+                    <p>
+                        Handles server-side logic, API routes, and data operations.
+                    </p>
+                </div>
+                <div class="feature/card">
+                    <h3>REST API</h3>
+                    <p>
+                        Connects frontend and backend to exchange data seamlessly using HTTP methods.
+                    </p>
+                </div>
+                <div class="feature/card">
+                    <h3>Scalable</h3>
+                    <p>
+                        Easily extendable with additional features, microservices, or third-party APIs.
+                    </p>
+                </div>
+            </section>
+            <section class="connections">
+                <h2>How It All Connects</h2>
+                <ol>
+                    <li><strong>Frontend (React):</strong>Handles user interface and interactions.</li>
+                    <li><strong>Backend (Node.js & Express.js):</strong>Manages APIs and business logic.</li>
+                    <li><strong>Database (Optional:)</strong>Stores persistent data (e.g., MongoDB or PostgreSQL).</li>
+                    <li><strong>API Communication:</strong>React fetches or sends data to the backend via APIs</li>
+                    <li><strong>Deployment:</strong>Apps can be hosted on services like Vercel, Netlify, or Heroku.</li>
+                </ol>
+            </section>
         </main>
     </div>
     </body>
